--- a/e-commerce/src/index.scss
+++ b/e-commerce/src/index.scss
@@ -1,3 +1,5 @@
+//fontes
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800display=swap");
 // Reset css
 * {
   box-sizing: border-box;
@@ -5,3 +7,4 @@
   margin: 0;
   font-family: "Raleway", sans-serif;
 }
+
