--- a/e-commerce/src/sass/_variables.scss
+++ b/e-commerce/src/sass/_variables.scss
@@ -1,5 +1,5 @@
 $header-background: #7a7a7a26;
-$black: black;
+$black: #2D2D2D;
 $white: white;
 $border-input-color: #7a7a7a;
 $contrast-color: #0c70f2;
