--- a/e-commerce/src/views/Login/login.scss
+++ b/e-commerce/src/views/Login/login.scss
@@ -6,6 +6,17 @@
     flex-direction: column;
     align-items: center;
 
+    &__header {
+        width: 100%;
+        background-color: $black;
+    
+        img {
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+            margin-left: 1rem;
+        }
+    }
+
     &__form {
         margin-top: 5rem;
         text-align: center;
