import das fontes arrumado

--- a/e-commerce/src/index.scss
+++ b/e-commerce/src/index.scss
@@ -1,5 +1,6 @@
 //fontes
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
+
 // Reset css
 * {
   box-sizing: border-box;
