--- a/e-commerce/src/views/Home/home.scss
+++ b/e-commerce/src/views/Home/home.scss
@@ -6,4 +6,13 @@
     &__main-img {
         width: 100%;
     }
+
+    &__cards {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 6rem;
+        justify-content: center;
+        margin-top: 5rem;
+        margin-bottom: 5rem ;
+    }
 }
