Inserido o Link de rota no button e feito estilização do mesmo

--- a/e-commerce/src/components/Card/card.scss
+++ b/e-commerce/src/components/Card/card.scss
@@ -42,4 +42,9 @@
         line-height: 20px;
         color: $white;
     }
+
+    a {
+        text-decoration: none;
+        color: $white;
+    }
 }
