--- a/e-commerce/src/components/Card/card.scss
+++ b/e-commerce/src/components/Card/card.scss
@@ -15,9 +15,10 @@
     }
 
     img {
-        width: 330px;
-        height: 255px;
+        width: 90%;
+        height: auto;
         display: flex;
+        margin: auto auto;
     }
 
     p {
@@ -46,5 +47,43 @@
     a {
         text-decoration: none;
         color: $white;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .card {
+        width: 276px;
+        height: 291.6px;
+
+        img {
+            width: 85%;
+            height: auto;
+        }
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+    .card {
+        width: 249px;
+        height: 262px;
+    
+    
+        img {
+            width: 80%;
+            height: auto
+        }
+    
+        p {
+            padding: 12px;
+            text-align: center;
+        }
+    
+        button {
+            width: 10rem;
+            height: 2rem;
+            font-size: 14px;
+            line-height: 20px;
+        }
     }
 }
