--- a/e-commerce/src/views/ProductDetail/productDetail.scss
+++ b/e-commerce/src/views/ProductDetail/productDetail.scss
@@ -112,7 +112,7 @@
         // css do container do lado esquerdo
         &__container-left-side {
             h2 {
-                padding: 1rem;
+                padding-left: 1rem;
                 width: 70%;
                 font-size: 1.2rem;
             }
@@ -153,11 +153,12 @@
         }
 
         &__cube-colors {
-    
+
             div {
                 width: 52px;
                 height: 47px;
                 margin-bottom: 6rem;
+                margin-top: 0.5rem;
             }
         }
     }
@@ -165,6 +166,7 @@
 
 @media screen and (max-width: 740px) {
     .product-detail {
+
         // css do container do lado direito
         &__container-right-side {
             button {
@@ -174,15 +176,60 @@
 
                 font-size: 12px;
             }
+        }
 
+        &__container-left-side {
+            img {
+                width: 80%;
+                height: auto;
+            }
+
+            h2 {
+                width: 65%;
+                text-align: left;
+                font-size: 1rem;
+                padding-left: 0;
+            }
+        }
+
+        &__container-left-side-title {
+            font-size: 0.9rem;
         }
     }
+
 }
 
-@media screen and (max-width: 650px) {
+
+@media screen and (max-width: 600px) {
     .product-detail {
+        &__container-left-side {
+            h2 {
+                width: 75%;
+                text-align: left;
+                font-size: 1rem;
+                padding-left: 0;
+            }
+        }
+
+        &__cube-colors {
+
+            div {
+                width: 47px;
+                height: 42px;
+                margin-bottom: 6rem;
+                margin-top: 0.5rem;
+            }
+        }
+
         // css do container do lado direito
         &__container-right-side {
+            p {
+                font-size: 0.8rem;
+            }
+
+            span {
+                font-size: 0.8rem;
+            }
             button {
                 margin: auto 6rem auto 2rem;
                 width: 15rem;
@@ -190,7 +237,64 @@
 
                 font-size: 12px;
             }
+        }
 
+        &__container-right-side-price {
+            font-size: 1rem;
+        }
+
+        &__container-right-side-title {
+            width: 85%;
+            font-size: 1rem;
+        }
+
+        &__container-left-side-decription {
+            width: 75%;
+            font-size: 0.7rem;
+            text-align: left;
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .product-detail {
+
+        &__cube-colors {
+
+            div {
+                width: 34px;
+                height: 31px;
+                margin-bottom: 6rem;
+                margin-top: 0.5rem;
+            }
+        }
+
+        // css do container do lado direito
+        &__container-right-side {
+
+            p {
+                font-size: 0.8rem;
+            }
+
+            span {
+                font-size: 0.8rem;
+            }
+            button {
+                width: 6rem;
+                height: 1.3rem;
+                font-size: 5px;
+            }
+        }
+
+        &__container-right-side-title {
+            width: 85%;
+            font-size: 0.8rem;
+        }
+
+        &__container-left-side-decription {
+            width: 75%;
+            font-size: 0.5rem;
+            text-align: left;
         }
     }
 }
