--- a/e-commerce/src/views/ShoppingCart/shoppingCart.scss
+++ b/e-commerce/src/views/ShoppingCart/shoppingCart.scss
@@ -5,3 +5,53 @@
         background-color: black;
     }
 }
+
+@media screen and (max-width: 900px) {
+    .product-detail__cube-colors {
+        div {
+            width: 58px;
+            height: 54px;
+            margin-bottom: 2rem;
+        }
+    }
+
+    .product-detail__container-left-side {
+        img {
+            width: 90%;
+            height: auto;
+        }
+    }
+}
+
+
+
+
+@media screen and (max-width: 430px) {
+
+    h1 {
+        font-size: 1rem;
+    }
+
+    .product-detail__cube-colors {
+        div {
+            width: 40px;
+            height: 37px;
+            margin-bottom: 2rem;
+        }
+    }
+
+    .product-detail__container-left-side {
+        img {
+            width: 90%;
+            height: auto;
+        }
+    }
+
+    .product-detail__container-right-side-title {
+        margin-bottom: 1rem;
+    }
+
+    .product-detail__container-right-side-title {
+        font-size: 0.7rem;
+    }
+}
