feito alteração na rota, trocado a tag <Link /> pelo useNavigate e feito uma estilização dos botoes

--- a/e-commerce/src/views/Login/login.scss
+++ b/e-commerce/src/views/Login/login.scss
@@ -78,6 +78,12 @@
         color: $white;
     }
 
+    button:hover {
+        cursor: pointer;
+        background-color: #1c07bd;
+        transition: 0.5s;
+    }
+
 
     // responsividade
     @media screen and (max-width: 768px) {
