--- a/e-commerce/src/components/Card/card.scss
+++ b/e-commerce/src/components/Card/card.scss
@@ -44,9 +44,10 @@
         color: $white;
     }
 
-    a {
-        text-decoration: none;
-        color: $white;
+    button:hover {
+        cursor: pointer;
+        background-color: #1c07bd;
+        transition: 0.5s;
     }
 }
 
