--- a/e-commerce/src/views/CheckOut/checkOut.scss
+++ b/e-commerce/src/views/CheckOut/checkOut.scss
@@ -52,12 +52,14 @@
         border: none;
 
         margin: 3rem auto;
+        color: $white;
     }
 
-    a {
-        color: $white;
-        text-decoration: none;
-    }
+    button:hover {
+        cursor: pointer;
+        background-color: #1c07bd;
+        transition: 0.5s;
+    } 
 
 }
 
