--- a/e-commerce/src/views/ShoppingCart/shoppingCart.scss
+++ b/e-commerce/src/views/ShoppingCart/shoppingCart.scss
@@ -4,6 +4,12 @@
         height: 100vh;
         background-color: black;
     }
+
+    button:hover {
+        cursor: pointer;
+        background-color: #1c07bd;
+        transition: 0.5s;
+    }
 }
 
 @media screen and (max-width: 900px) {
