Feature - click na img no Header direciona para a Home

--- a/e-commerce/src/components/Header/header.scss
+++ b/e-commerce/src/components/Header/header.scss
@@ -12,6 +12,10 @@
         align-items: center;
     }
 
+    &__superior:hover {
+        cursor: pointer;
+    }
+
     &__superior-logo {
         width: 9%;
         height: auto;
@@ -195,6 +199,4 @@
             }
         }
     }
-
-
 }
