font-family do campo input da view de login alterado

--- a/e-commerce/src/views/Login/login.scss
+++ b/e-commerce/src/views/Login/login.scss
@@ -50,6 +50,7 @@
         }
 
         input {
+            font-family: serif; 
             height: 52px;
             padding: 18px 13px;
             border: 2px solid $border-input-color;
